--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,16 @@
     "test": "cross-env NODE_ENV=test jest --testTimeout=30000 --forceExit --detectOpenHandles",
     "start": "nodemon index.js"
   },
-  "author": "Javier",
+  "author": "Sergio",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.5",
-    "universal-cookie": "^4.0.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
