--- a/meloudy_app/pubspec.yaml
+++ b/meloudy_app/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: any
-  provider: any
+  provider: ^4.0.0
+  shared_preferences: ^0.5.3+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
