--- a/meloudy_app/pubspec.yaml
+++ b/meloudy_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: any
   provider: ^4.0.0
   shared_preferences: ^0.5.3+1
+  percent_indicator: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
