--- a/meloudy_app/pubspec.yaml
+++ b/meloudy_app/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   provider: ^4.0.0
   shared_preferences: ^0.5.3+1
   percent_indicator: ^4.0.1
+  flutter_fft: 1.0.2+6
+  record: 4.4.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
