--- a/meloudy_app/pubspec.yaml
+++ b/meloudy_app/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   percent_indicator: ^4.0.1
   flutter_fft: 1.0.2+6
   record: 4.4.4
+  image_picker: ^0.8.5
+  path_provider: ^2.0.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
