--- a/meloudy_app/pubspec.yaml
+++ b/meloudy_app/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   record: 4.4.4
   image_picker: ^0.8.5
   path_provider: ^2.0.14
+  nock: ^1.1.2
+  network_image_mock: ^2.0.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
