--- a/meloudy_app/pubspec.yaml
+++ b/meloudy_app/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   image_picker: ^0.8.5
   path_provider: ^2.0.14
   nock: ^1.1.2
-  network_image_mock: ^2.0.14
-
+  network_image_mock: ^2.0.1
+  mockito: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
