--- a/meloudy_app/pubspec.yaml
+++ b/meloudy_app/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   nock: ^1.1.2
   network_image_mock: ^2.0.1
   mockito: ^5.0.0
+  flutter_driver:
+    sdk: flutter
+  test: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
